# insurance-claims-adjudication

./: .dockerignore  .env.docker.example  .env.local.example  .gitignore  Dockerfile.minio  README.md  create_test_policy_holder.ps1  database_schema.txt  docker-compose.dev.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  policy_terms.json  pyproject.toml  seed_policy_terms.py  verify_ocr_pipeline.py
backend/alembic/: env.py
backend/alembic/versions/: 02bccb97b9ae_add_decision_column_to_claims_table.py  0f41c72099fc_add_password_to_policy_holders.py  1aa9ceb7ea31_complete_schema_with_policy_terms_and_.py  4b895a667b0b_add_claim_decisions_table_for_.py  add_id_sequences.py  bcbe87edf19f_merge_heads.py  create_usage_log.py  ddcae578c358_add_auth_fields_to_policy_holders.py
backend/app/: config.py  main.py  worker.py
backend/app/api/: adjudication.py  admin.py  auth.py  claims.py  dependents.py  document_processing.py  documents.py  documents_upload.py  metrics.py  policy.py  policy_holders.py  policy_terms.py  upload.py  usage_monitoring.py
backend/app/models/: __init__.py  enums.py  models.py  usage_log.py  user.py
backend/app/schemas/: __init__.py  auth.py  schemas.py
backend/app/services/: adjudication_engine.py  auth_service.py  document_classifier.py  document_processor.py  hybrid_ocr_service.py  llm_service.py  (+8 more)
backend/scripts/: add_password_column.py  clear_database.py  create_users_for_policy_holders.py
backend/tests/: test_adjudication_api.py  test_adjudication_engine.py
(+45 files in other folders)
